--- a/src/component/GameEnd/index.css
+++ b/src/component/GameEnd/index.css
@@ -1,6 +1,20 @@
 .card-wrap {
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin: 10% auto 0 auto;
+}
+
+.end-tips {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.end-tips div {
+  font-size: 20px;
+  margin: 30px 0;
 }
